{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 27,
  "lineage": "ea43a20c-85b7-4211-1d9a-c0916958eb6b",
  "resources": [
    {
      "module": "module.ec2[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevInstanceAWS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09b89ad3c5769cca2",
            "arn": "arn:aws:ec2:eu-west-2:538215634837:instance/i-03b6c3cbf14b6d869",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03b6c3cbf14b6d869",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "Test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091e9735efbb6358d",
            "private_dns": "ip-10-132-1-14.eu-west-2.compute.internal",
            "private_ip": "10.132.1.14",
            "public_dns": "ec2-35-177-226-38.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.226.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-2:538215634837:key/b0dbf98b-7dc9-4585-a82c-72722f8e3e97",
                "volume_id": "vol-0b6bc0e103fd77c57",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2a7897e3ed281e0",
            "tags": {
              "Name": "DevInstanceAWS-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077ae3aa811523f75"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_external",
            "module.vpc.aws_subnet.dev-subnet-public",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:security-group/sg-077ae3aa811523f75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "94.6.20.160/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077ae3aa811523f75",
            "ingress": [
              {
                "cidr_blocks": [
                  "94.6.20.160/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20201027103743884100000001",
            "name_prefix": "",
            "owner_id": "538215634837",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_external"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c099cd6e25f8a9bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-064e891c300adc5d8",
            "domain": "vpc",
            "id": "eipalloc-0ee7d7ceceff665b2",
            "network_interface": "eni-00d85d04b132f5559",
            "private_dns": "ip-10-132-2-53.eu-west-2.compute.internal",
            "private_ip": "10.132.2.53",
            "public_dns": "ec2-3-10-135-95.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.135.95",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:internet-gateway/igw-098d87f0d5fd9ac09",
            "id": "igw-098d87f0d5fd9ac09",
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0c099cd6e25f8a9bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev-ngw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee7d7ceceff665b2",
            "id": "nat-05a195e03fc1b7174",
            "network_interface_id": "eni-00d85d04b132f5559",
            "private_ip": "10.132.2.53",
            "public_ip": "3.10.135.95",
            "subnet_id": "subnet-0b0b1b38838091ec5",
            "tags": {
              "Name": "dev-ngw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.dev-subnet-private",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-private-crt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-010ef3c0528bcd55b",
            "owner_id": "538215634837",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-private-rt"
            },
            "vpc_id": "vpc-0c099cd6e25f8a9bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-public-crt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01cff67b5a111d566",
            "owner_id": "538215634837",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "94.6.20.160/32",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098d87f0d5fd9ac09",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "vpc_id": "vpc-0c099cd6e25f8a9bd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev-igw",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-crta-private-subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059dc6d70df612aa8",
            "route_table_id": "rtb-010ef3c0528bcd55b",
            "subnet_id": "subnet-0b0b1b38838091ec5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.dev-private-crt",
            "module.vpc.aws_subnet.dev-subnet-private",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c048273637ae69b",
            "route_table_id": "rtb-010ef3c0528bcd55b",
            "subnet_id": "subnet-03c6636f1afec0bc4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.dev-private-crt",
            "module.vpc.aws_subnet.dev-subnet-private",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-crta-public-subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04525338c0da10d9d",
            "route_table_id": "rtb-01cff67b5a111d566",
            "subnet_id": "subnet-0c2a7897e3ed281e0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev-igw",
            "module.vpc.aws_route_table.dev-public-crt",
            "module.vpc.aws_subnet.dev-subnet-public",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a30a27096141cf96",
            "route_table_id": "rtb-01cff67b5a111d566",
            "subnet_id": "subnet-0a478eeda13361acf"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.dev-igw",
            "module.vpc.aws_route_table.dev-public-crt",
            "module.vpc.aws_subnet.dev-subnet-public",
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet-private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:subnet/subnet-0b0b1b38838091ec5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.132.2.0/26",
            "id": "subnet-0b0b1b38838091ec5",
            "map_public_ip_on_launch": false,
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-subnet-private-1"
            },
            "vpc_id": "vpc-0c099cd6e25f8a9bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:subnet/subnet-03c6636f1afec0bc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.132.2.64/26",
            "id": "subnet-03c6636f1afec0bc4",
            "map_public_ip_on_launch": false,
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-subnet-private-2"
            },
            "vpc_id": "vpc-0c099cd6e25f8a9bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet-public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:subnet/subnet-0c2a7897e3ed281e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.132.1.0/26",
            "id": "subnet-0c2a7897e3ed281e0",
            "map_public_ip_on_launch": true,
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-subnet-public-1"
            },
            "vpc_id": "vpc-0c099cd6e25f8a9bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:subnet/subnet-0a478eeda13361acf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.132.1.64/26",
            "id": "subnet-0a478eeda13361acf",
            "map_public_ip_on_launch": true,
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-subnet-public-2"
            },
            "vpc_id": "vpc-0c099cd6e25f8a9bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:538215634837:vpc/vpc-0c099cd6e25f8a9bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.132.0.0/21",
            "default_network_acl_id": "acl-0c788e4c560c94196",
            "default_route_table_id": "rtb-0ddf5f3ed2a8bf092",
            "default_security_group_id": "sg-085681381d862ad74",
            "dhcp_options_id": "dopt-c390b9ab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c099cd6e25f8a9bd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ddf5f3ed2a8bf092",
            "owner_id": "538215634837",
            "tags": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}